--- a/Next_moov/Next_moov/Next_moov.csproj
+++ b/Next_moov/Next_moov/Next_moov.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <Folder Include="CSS\" />
     <Folder Include="Utils\" />
   </ItemGroup>
 
